--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 
+.idea/misc.xml
+.idea/modules.xml
+.idea/NodeJsLearning.iml
+.idea/vcs.xml
+.idea/workspace.xml
